# ros-assignments

./: CMakeLists.txt  README.md  package.xml
ros/ros_assignments/: CMakeLists.txt  package.xml
ros/ros_assignments/launch/: exercise.launch  exercise_ros2.launch
ros/ros_assignments/scripts/: controller.py  user_interface.py
ros/ros_assignments/srv/: UserCommand.srv
ros2/ros_assignments/: CMakeLists.txt  mapping_rules.yaml  package.xml
ros2/ros_assignments/src/: position_generation_service.cpp  user_interface.cpp
scripts/: controller.py  position_generator_service.py
